--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -27,9 +27,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Azure CLI
-        run: |
-          curl -sL https://aka.ms/InstallAzureCLIDeb | bash
-          az version
+        uses: azure/setup-azure-cli@v1
 
       - name: Login to Azure
         run: |
@@ -65,9 +63,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Azure CLI
-        run: |
-          curl -sL https://aka.ms/InstallAzureCLIDeb | bash
-          az version
+        uses: azure/setup-azure-cli@v1
 
       - name: Login to Azure
         run: |
@@ -96,9 +92,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Azure CLI
-        run: |
-          curl -sL https://aka.ms/InstallAzureCLIDeb | bash
-          az version
+        uses: azure/setup-azure-cli@v1
 
       - name: Login to Azure
         run: |
@@ -152,9 +146,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Azure CLI
-        run: |
-          curl -sL https://aka.ms/InstallAzureCLIDeb | bash
-          az version
+        uses: azure/setup-azure-cli@v1
 
       - name: Login to Azure
         run: |
