--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -27,7 +27,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Azure CLI
-        uses: azure/setup-azure-cli@v1
+        run: |
+          curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+          az version
 
       - name: Login to Azure
         run: |
@@ -63,7 +65,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Azure CLI
-        uses: azure/setup-azure-cli@v1
+        run: |
+          curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+          az version
 
       - name: Login to Azure
         run: |
@@ -92,7 +96,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Azure CLI
-        uses: azure/setup-azure-cli@v1
+        run: |
+          curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+          az version
 
       - name: Login to Azure
         run: |
@@ -146,7 +152,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Azure CLI
-        uses: azure/setup-azure-cli@v1
+        run: |
+          curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+          az version
 
       - name: Login to Azure
         run: |
