feat: Add comprehensive project cleanup
- Remove Python cache files (__pycache__, *.pyc)
- Remove log files (server.log)
- Remove duplicate test files (test-server.py, demo-server.py)
- Remove old specification files (開発仕様書(たたき).txt)
- Update .gitignore with comprehensive patterns
- Add cleanup.sh script for automated cleanup
- Total cleanup: removed 3+ unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,27 @@ coverage/
 
 # Server files
 server.log
+
+# Development and test files
+test-server.py
+demo-server.py
+*たたき*.txt
+
+# Python cache (additional)
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+pip-log.txt
+pip-delete-this-directory.txt
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
