--- a/azure-data-pipeline/api/dashboard-api/requirements.txt
+++ b/azure-data-pipeline/api/dashboard-api/requirements.txt
@@ -3,3 +3,7 @@ flask-cors==4.0.0
 azure-cosmos==4.5.1
 paho-mqtt==1.6.1
 python-dotenv==1.0.0
+azure-storage-blob==12.19.0
+azure-search-documents==11.4.0
+azure-identity==1.15.0
+azure-iot-hub==2.3.0
