feat: アーキテクチャ図に沿った実装完了とPython 3.11対応
- アーキテクチャ図の簡素化完了
  - Event Hub, Stream Analytics, CDN, PostgreSQL, AI Searchを削除
  - データフローを最適化

- Azure Functions実装完了
  - DataCollector: センサーデータ収集・正規化
  - ImageProcessor: 画像処理・Blob Storage保存
  - DataAnalyzer: データ分析・異常値検出

- Python 3.11対応
  - 全ファイルでPython 3.9 → 3.11に更新
  - GitHub Actions, Bicep, デプロイガイドを更新

- 統合テスト・実装状況ドキュメント追加
  - test-integration.py: 全データフローのテスト
  - IMPLEMENTATION_STATUS.md: 実装状況サマリー

- 不要ファイルの削除
  - Event Hub作成スクリプト
  - Stream Analyticsクエリファイル
  - 古いBlobコンテナ設定

これでアーキテクチャ図通りの実装が完了し、初期実装に最適化されたシステムになりました。

--- a/infrastructure/parameters-static-web-app-personal.json
+++ b/infrastructure/parameters-static-web-app-personal.json
@@ -11,8 +11,8 @@
     "location": {
       "value": "East Asia"
     },
-    "resourceGroupName": {
-      "value": "MSLab-test"
+    "repositoryUrl": {
+      "value": "https://github.com/your-username/your-repo"
     }
   }
 }
