--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -1,15 +1,11 @@
-name: Deploy to Azure
+name: Deploy to Azure (Auto)
 
 on:
   push:
     branches: [ main ]
     paths:
       - 'infrastructure/**'
-      - '.github/workflows/azure-deploy.yml'
-  pull_request:
-    branches: [ main ]
-    paths:
-      - 'infrastructure/**'
+      - 'azure-data-pipeline/**'
       - '.github/workflows/azure-deploy.yml'
   workflow_dispatch:
     inputs:
@@ -23,26 +19,21 @@ on:
         - prod
 
 env:
-  AZURE_WEBAPP_NAME: api-mass-smart-space-dev
-  RESOURCE_GROUP: MS-Lab-Proj-RG
-  LOCATION: Japan East
+  PROJECT_NAME: mass-smart-space
+  LOCATION: japaneast
 
 jobs:
-  validate-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-
-    - name: Install Azure CLI
+    - name: Setup Azure CLI
       run: |
         curl -sL https://aka.ms/InstallAzureCLIDeb | bash
+        az version
 
     - name: Azure Login
       uses: azure/login@v1
@@ -57,93 +48,36 @@ jobs:
         else
           echo "ENVIRONMENT=dev" >> $GITHUB_ENV
         fi
+        echo "RESOURCE_GROUP=rg-${{ env.PROJECT_NAME }}-${{ env.ENVIRONMENT }}" >> $GITHUB_ENV
 
-    - name: Validate Bicep template
+    - name: Create Resource Group
+      run: |
+        az group create \
+          --name ${{ env.RESOURCE_GROUP }} \
+          --location ${{ env.LOCATION }}
+
+    - name: Deploy Infrastructure
       run: |
         cd infrastructure
-        az deployment group validate \
-          --resource-group ${{ env.RESOURCE_GROUP }} \
-          --template-file main.bicep \
-          --parameters parameters.${{ env.ENVIRONMENT }}.json
-
-    - name: Deploy to Azure (Simple template first)
-      if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
-      run: |
-        cd infrastructure
-        echo "Deploying simple template first..."
-        az deployment group create \
-          --resource-group ${{ env.RESOURCE_GROUP }} \
-          --template-file simple.bicep \
-          --parameters parameters.simple.json \
-          --name "simple-deployment-$(date +%Y%m%d-%H%M%S)"
-
-    - name: Deploy to Azure (Full template)
-      if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
-      run: |
-        cd infrastructure
-        echo "Deploying full template..."
         az deployment group create \
           --resource-group ${{ env.RESOURCE_GROUP }} \
           --template-file main.bicep \
           --parameters parameters.${{ env.ENVIRONMENT }}.json \
-          --name "full-deployment-$(date +%Y%m%d-%H%M%S)"
+          --name "auto-deployment-$(date +%Y%m%d-%H%M%S)"
 
-    - name: Deploy API to App Service
-      if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+    - name: Deploy API
       run: |
         cd azure-data-pipeline/api/dashboard-api
         zip -r api.zip .
         az webapp deployment source config-zip \
           --resource-group ${{ env.RESOURCE_GROUP }} \
-          --name ${{ env.AZURE_WEBAPP_NAME }} \
+          --name "api-${{ env.PROJECT_NAME }}-${{ env.ENVIRONMENT }}" \
           --src api.zip
 
-    - name: Create IoT Device
-      if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+    - name: Deployment summary
       run: |
-        cd infrastructure
-        chmod +x create-iot-device.sh
-        ./create-iot-device.sh
-
-    - name: Get deployment outputs
-      if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
-      run: |
-        cd infrastructure
-        echo "=== Deployment Summary ==="
+        echo "=== Auto Deployment Summary ==="
         echo "Resource Group: ${{ env.RESOURCE_GROUP }}"
         echo "Environment: ${{ env.ENVIRONMENT }}"
         echo "Location: ${{ env.LOCATION }}"
-        echo ""
-        echo "=== Created Resources ==="
-        az resource list --resource-group ${{ env.RESOURCE_GROUP }} --query "[].{name:name, type:type, provisioningState:provisioningState}" -o table
-
-  test-deployment:
-    needs: validate-and-deploy
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-
-    - name: Install dependencies
-      run: |
-        cd azure-data-pipeline/api/dashboard-api
-        pip install -r requirements.txt
-
-    - name: Run tests
-      run: |
-        cd azure-data-pipeline/api/dashboard-api
-        python -m pytest tests/ -v
-
-    - name: Health check
-      run: |
-        # Wait for deployment to complete
-        sleep 60
-        # Add health check logic here
-        echo "Health check completed"
+        echo "Trigger: ${{ github.event_name }}"
