fix: GitHub ActionsでAzure CLIインストール時の権限エラーを修正
- Setup Azure CLIステップでsudoを使用
- azure-deploy.ymlとazure-destroy.ymlの両方を修正
- 権限エラー（E: Could not open lock file）を解決
- YAML構文エラーの修正も完了

--- a/.github/workflows/azure-destroy.yml
+++ b/.github/workflows/azure-destroy.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Setup Azure CLI
         run: |
-          curl -sL https://aka.ms/InstallAzureCLIDeb | bash
+          curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
           az version
 
       - name: Login to Azure
