--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Setup Azure CLI
       run: |
-        curl -sL https://aka.ms/InstallAzureCLIDeb | bash
+        curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
         az version
 
     - name: Azure Login
