--- a/.gitignore
+++ b/.gitignore
@@ -134,6 +134,11 @@ dmypy.json
 *.bicep.parameters.prod.json
 *.bicep.parameters.staging.json
 
+# Bicepの生成ファイル（ARMテンプレート）
+main.json
+main-*.json
+*.bicep.json
+
 # Azure CLI
 .azure/
 
